# Patch-Loader

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  about.md  compile.sh  mod.json
examples/: patches.json
libraries/minhook/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  minhook.sln  minhook.vcxproj  minhook.vcxproj.filters
src/: dllmain.cpp  includes.h  includes.hpp  main.cpp
src/bindings/: AppDelegate.h  AppDelegate.hpp  CCAnimateFrameCache.hpp  CCContentManager.hpp
src/browsers/: PatchesBrowser.cpp  PatchesBrowser.hpp
src/hooks/: AppDelegate.cpp  AppDelegate.hpp  MenuLayer.cpp  MenuLayer.hpp
src/lists/cells/: PatchCell.cpp  PatchCell.hpp
src/lists/views/: PatchesListView.cpp  PatchesListView.hpp
src/nodes/: SimpleTextArea.cpp  SimpleTextArea.hpp  SimpleTextContainer.cpp  SimpleTextContainer.hpp
src/nodes/cells/: PatchCell.cpp  PatchCell.hpp  SubPatchBytesCell.cpp  SubPatchBytesCell.hpp  SubPatchCell.cpp  SubPatchCell.hpp  SubPatchRangeCell.cpp  (+1 more)
src/objects/: BasePatch.cpp  BasePatch.hpp  BetterTextArea.hpp  Patch.cpp  Patch.hpp  PatchBase.cpp  PatchBase.hpp  PatchObject.cpp  PatchObject.hpp  PatchRange.cpp  PatchRange.hpp  PatchStorage.cpp  PatchStorage.hpp  PatchVector.cpp  PatchVector.hpp  SubPatch.cpp  SubPatch.hpp  Tag.hpp
src/scenes/: Interface.cpp  Interface.hpp  PatchInterface.cpp  PatchInterface.hpp  PatchesBrowser.cpp  PatchesBrowser.hpp
src/utils/: Hook.cpp  Hook.hpp  TagGenerator.cpp  TagGenerator.hpp  converters.cpp  converters.hpp  gd_extra.hpp
(+3 files in other folders)
